tests for state machine